run cloning script before running

--- a/indexing/Dockerfile
+++ b/indexing/Dockerfile
@@ -9,4 +9,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 80
 
-CMD ["python", "main.py"]
+CMD ["sh", "-c", "python clone.py && python main.py"]
+
