--- a/indexing/config.yaml
+++ b/indexing/config.yaml
@@ -9,12 +9,15 @@ file_extensions_to_parse:
     - ".py"
     - ".java"
 
-regex_mappings:
+cleaning:
     .py:
         - "#.*"
         - "\"\"\"[\\s\\S]*?\"\"\""
-        - "\\s+"
     .java:
         - "//.*"
         - "/\\*[\\s\\S]*?\\*/"
-        - "\\s+"
+
+chunking:
+  .py: '^\s*(def\s+.*?:|class\s+.*?:)'
+
+  .java: '^\s*(public|protected|private)?\s*(static\s+)?((class|interface|enum)\s+\w+|[\w<>\[\]]+\s+\w+\s*\(.*?\)\s*\{)'
